{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "AimingControls",
            "id": "b0e71cfb-5d06-49ba-8db4-ddc5efb5b0f0",
            "actions": [
                {
                    "name": "Aim",
                    "type": "PassThrough",
                    "id": "9a461de1-a8eb-4a1a-b04c-122ce6cf077b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e71841cd-2128-4148-863e-dbadb291df6e",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "ScaleVector2(x=10,y=10)",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d818be11-4440-4179-bc8a-ba761e5405ff",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerActions",
            "id": "8a847106-c9dc-4d17-a528-28dcd3e65673",
            "actions": [
                {
                    "name": "Sensitivity",
                    "type": "PassThrough",
                    "id": "6cd81536-c545-40a5-8836-2755e7bf9182",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bb8b0527-3dec-4a90-807f-4282afbce47a",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sensitivity",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc5d64cc-b78b-4963-a998-62d772f3818a",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sensitivity",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}